# website

./: .firebaserc  .gitattributes  .gitignore  .vercelignore  CLAUDE.md  GenerateTikx.py  README.md  app copy.py  app.py  firebase.json  package-lock.json  package.json  requirements.txt  temp.dot  temp.tikz  temp2.fdb_latexmk  temp2.fls  temp2.tex  tsconfig.json  vercel.json
api/: process-dot2tex.js
components/: FlashcardApp.js  QuizletApp.js
flash_cards/: .gitignore  AUDIO_PRECOMPILATION.md  COMPLETE_SETUP.md  EDGE_TTS_README.md  EDGE_TTS_SETUP_COMPLETE.md  PRECOMPILE_OPTIONS.md  SETUP_COMPLETE.md  TTS_README.md  app.css  app.js  cards.md  check_setup.sh  edge_tts_server.py  index.html  melo_server.py  prebuild_cache.py  precompile_all_cards.py  precompile_edge_tts.py  precompile_sofia.py  requirements-edge-tts.txt  requirements.txt  restart_tts.sh  start_edge_tts.sh  start_melo.sh  start_tts.sh  test_tts.py  tts_server.py
lib/: parseFlashcards.js
music_player/: ASSET_GENERATOR_README.md  HOW_HIGHLIGHTING_WORKS.md  README.md  START_PLAYER.sh  TIMEMAP_GENERATOR_README.md  TODO.md  UPDATES_COMPLETE.md  generate-all-assets.js  generate-timemaps.js  index.html  info.md  midi.css  muse_player_test.html  package-lock.json  package.json  rehearse.html  rehearse_old.html  sfplayer.py  state.md  vercel.json  verovio.html  verovio_midi.html  videos.html  we-three.json  we-three.mei  we-three.musicxml
music_player/musescore-player/: CMakeLists.txt  README.md  package.json  server.py
music_player/musescore-player/cmake/: EmscriptenConfig.cmake
music_player/musescore-player/src/api/: musescoreplayer.cpp  musescoreplayer.h
music_player/musescore-player/src/bindings/: embind.cpp
music_player/musescore-player/src/core/: placeholder.cpp
music_player/musescore-player/tests/: test-player.html
music_player/musescore-player/web/js/: midi-player.js  mscz-loader.js  musescore-player-complete.js  musescore-player.js  score-library.js  verovio-player-complete.js  verovio-player.js
pages/: OS.js  Software.js  study.html.js  study.js
public/: index.html
(+38 files in other folders)
